# LogNav

./: AGENTS.md  Cargo.toml  README.md  spec.md
.github/workflows/: release.yml
github/issues/: 002-slow-search.md  005-recent-file-enter-does-nothing.md  007-debug-level-default.md
github/issues/done/: 001-tail-prints-indefinitely.md  003-word-wrap-broken.md  004-esc-should-not-quit.md  004-scrolling-broken-when-lines-expanded.md  005-date-range-dialog-ux-improvements.md  006-improve-ui-discoverability.md  006-search-n-N-usefulness.md
src/: app.rs  clusters.rs  config.rs  events.rs  log_entry.rs  log_tailer.rs  main.rs  text_input.rs  text_utils.rs  theme.rs  tips.rs  ui.rs  update.rs
src/app/: commands.rs  filtering.rs  mod.rs  navigation.rs  stats_template.html
src/events/: clusters.rs  command.rs  date_filter.rs  detail.rs  exclude_manager.rs  export.rs  file_open.rs  filter_manager.rs  help.rs  mod.rs  mouse.rs  normal.rs  search.rs  search_panel.rs  stats.rs  theme_picker.rs
src/parsers/: common.rs  custom.rs  defaults.rs  generic.rs  mod.rs  qconsole.rs  wd.rs  wpc.rs  yaml_parser.rs
src/ui/: clusters_panel.rs  log_view.rs  matches_panel.rs  mod.rs  overlays.rs  status_bar.rs  syntax.rs
