[package]
name = "lognav"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.4"
chrono = "0.4.43"
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
notify = "8.2.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
